--- a/build.gradle
+++ b/build.gradle
@@ -45,12 +45,23 @@ test {
 useJUnitPlatform()}
 
 jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+  imageZip = layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip").get().asFile
   options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
   launcher {
-    name = 'app'
+    name = 'MyApp' 
+  }
+  jpackage {
+    installerType = 'exe'
+    appVersion = '1.0.0'
+    installerOptions = [
+            '--win-dir-chooser',
+            '--win-menu',
+            '--win-shortcut'
+    ]
   }
 }
+
+
 
 jlinkZip {
   group = 'distribution'
