--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ javafx {
 }
 
 dependencies {
-  implementation 'mysql:mysql-connector-java:8.0.32'
+  implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
   implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
