--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ javafx {
 }
 
 dependencies {
+  implementation 'org.jfree:jfreechart:1.5.3'
   implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
   implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
