--- a/build.gradle
+++ b/build.gradle
@@ -1,69 +1,93 @@
 plugins {
-  id 'java'
-  id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
+    id 'java'
+    id 'application'
+    id 'org.javamodularity.moduleplugin' version '1.8.12'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.beryx.jlink' version '2.25.0'
 }
 
 group 'edu.metrostate'
 version '1.0-SNAPSHOT'
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
 
 ext {
-  junitVersion = '5.10.0'
+    junitVersion = '5.10.0'
 }
 
 sourceCompatibility = '21'
 targetCompatibility = '21'
 
 tasks.withType(JavaCompile) {
-  options.encoding = 'UTF-8'
+    options.encoding = 'UTF-8'
 }
 
 application {
-  mainModule = 'edu.metrostate.fitnessmanagementsystem'
-  mainClass = 'edu.metrostate.fitnessmanagementsystem.MainApplication'
+    mainModule = 'edu.metrostate.fitnessmanagementsystem'
+    mainClass = 'edu.metrostate.fitnessmanagementsystem.MainApplication'
 }
 
 javafx {
-  version = '21'
-  modules = ['javafx.controls', 'javafx.fxml']
+    version = '21'
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
-  implementation 'org.jfree:jfreechart:1.5.3'
-  implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
-  implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
-  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
+    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
 test {
-useJUnitPlatform()}
+    useJUnitPlatform()
+}
 
+// For Windows .exe
 jlink {
-  imageZip = layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip").get().asFile
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-  launcher {
-    name = 'MyApp' 
-  }
-  jpackage {
-    installerType = 'exe'
-    appVersion = '1.0.0'
-    installerOptions = [
-            '--win-dir-chooser',
-            '--win-menu',
-            '--win-shortcut'
-    ]
-  }
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'MyApp'
+    }
+    jpackage {
+        installerType = 'exe'
+        appVersion = '1.0.0'
+        icon = 'C:/Window&Mac ICNs/icon.icns'
+        // This line should reference an .ico file for Windows, update it accordingly.
+        installerOptions = [
+                '--win-dir-chooser',
+                '--win-menu',
+                '--win-shortcut'
+        ]
+    }
+}
+
+// For macOS .dmg
+task jpackageDmg(type: Exec) {
+    dependsOn jlink
+    commandLine 'jpackage', '--type', 'dmg',
+            '--input', 'build/jlinkbase/jlink',
+            '--dest', 'build/installer',
+            '--name', 'MyApp',
+            '--app-version', '1.0.0',
+            '--icon', 'C:/Window&Mac ICNs/icon.icns' // Correct icon path for macOS
+}
+
+// For Linux .tar.gz
+task jpackageTarGz(type: Exec) {
+    dependsOn jlink
+    commandLine 'jpackage', '--type', 'tar.gz',
+            '--input', 'build/jlinkbase/jlink',
+            '--dest', 'build/installer',
+            '--name', 'MyApp',
+            '--app-version', '1.0.0',
+            '--icon', 'C:/Linux Icon/icon.png' // Correct icon path for Linux
 }
 
 
-
 jlinkZip {
-  group = 'distribution'
+    group = 'distribution'
 }
