--- a/build.gradle
+++ b/build.gradle
@@ -50,13 +50,12 @@ test {
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'MyApp'
+        name = 'FitnessManagementSystem'
     }
     jpackage {
         installerType = 'exe'
         appVersion = '1.0.0'
-        icon = 'C:/Window&Mac ICNs/icon.icns'
-        // This line should reference an .ico file for Windows, update it accordingly.
+        icon = 'C:/FitnessManagementSystem/icon.ico'
         installerOptions = [
                 '--win-dir-chooser',
                 '--win-menu',
@@ -65,27 +64,6 @@ jlink {
     }
 }
 
-// For macOS .dmg
-task jpackageDmg(type: Exec) {
-    dependsOn jlink
-    commandLine 'jpackage', '--type', 'dmg',
-            '--input', 'build/jlinkbase/jlink',
-            '--dest', 'build/installer',
-            '--name', 'MyApp',
-            '--app-version', '1.0.0',
-            '--icon', 'C:/Window&Mac ICNs/icon.icns' // Correct icon path for macOS
-}
-
-// For Linux .tar.gz
-task jpackageTarGz(type: Exec) {
-    dependsOn jlink
-    commandLine 'jpackage', '--type', 'tar.gz',
-            '--input', 'build/jlinkbase/jlink',
-            '--dest', 'build/installer',
-            '--name', 'MyApp',
-            '--app-version', '1.0.0',
-            '--icon', 'C:/Linux Icon/icon.png' // Correct icon path for Linux
-}
 
 
 jlinkZip {
